{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 78,
  "lineage": "a5b0d1a2-ca52-045d-316f-984f04a475f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62dbc673eed46ed",
            "arn": "arn:aws:ec2:us-east-1:058264155332:elastic-ip/eipalloc-0e62dbc673eed46ed",
            "association_id": "eipassoc-0d5756e36ccb92d68",
            "domain": "vpc",
            "id": "eipalloc-0e62dbc673eed46ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06629516890a6d773",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-52-72-237-220.compute-1.amazonaws.com",
            "public_ip": "52.72.237.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "healthcare-lab-nat-eip"
            },
            "tags_all": {
              "Name": "healthcare-lab-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:058264155332:instance/i-0312a9218076d87d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0312a9218076d87d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "healthcare-lab-worker-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1f6f75fa7394e80",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-54-196-33-47.compute-1.amazonaws.com",
            "public_ip": "54.196.33.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac96ab58641a524f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05ae62cdfbb1aa3c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e13d3bc8007ff7bd",
            "tags": {
              "Name": "healthcare-lab-ec2-worker"
            },
            "tags_all": {
              "Name": "healthcare-lab-ec2-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ae62cdfbb1aa3c5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.worker_key",
            "aws_security_group.ec2_worker_sg",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:internet-gateway/igw-023e1e10e439da41c",
            "id": "igw-023e1e10e439da41c",
            "owner_id": "058264155332",
            "tags": {
              "Name": "healthcare-lab-igw"
            },
            "tags_all": {
              "Name": "healthcare-lab-igw"
            },
            "vpc_id": "vpc-0929b3d173f4f8d8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62dbc673eed46ed",
            "association_id": "eipassoc-0d5756e36ccb92d68",
            "connectivity_type": "public",
            "id": "nat-056e995e0373c8525",
            "network_interface_id": "eni-06629516890a6d773",
            "private_ip": "10.0.1.215",
            "public_ip": "52.72.237.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e13d3bc8007ff7bd",
            "tags": {
              "Name": "healthcare-lab-nat"
            },
            "tags_all": {
              "Name": "healthcare-lab-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:route-table/rtb-0b69c6a322b8b9520",
            "id": "rtb-0b69c6a322b8b9520",
            "owner_id": "058264155332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056e995e0373c8525",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthcare-lab-private-rt"
            },
            "tags_all": {
              "Name": "healthcare-lab-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0929b3d173f4f8d8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:route-table/rtb-0e3e9428631de7906",
            "id": "rtb-0e3e9428631de7906",
            "owner_id": "058264155332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023e1e10e439da41c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthcare-lab-public-rt"
            },
            "tags_all": {
              "Name": "healthcare-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0929b3d173f4f8d8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab0d980460f811a",
            "route_table_id": "rtb-0b69c6a322b8b9520",
            "subnet_id": "subnet-0f6ca8b36e0dadcd9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005f48402d9f041ea",
            "route_table_id": "rtb-0e3e9428631de7906",
            "subnet_id": "subnet-0e13d3bc8007ff7bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:security-group/sg-05ae62cdfbb1aa3c5",
            "description": "Allow SSH, HTTP, and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ae62cdfbb1aa3c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "healthcare-lab-ec2-worker-sg",
            "name_prefix": "",
            "owner_id": "058264155332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthcare-lab-ec2-worker-sg"
            },
            "tags_all": {
              "Name": "healthcare-lab-ec2-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0929b3d173f4f8d8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:subnet/subnet-0f6ca8b36e0dadcd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6ca8b36e0dadcd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264155332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthcare-lab-private-1"
            },
            "tags_all": {
              "Name": "healthcare-lab-private-1"
            },
            "vpc_id": "vpc-0929b3d173f4f8d8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:subnet/subnet-0e13d3bc8007ff7bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e13d3bc8007ff7bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264155332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthcare-lab-public-1"
            },
            "tags_all": {
              "Name": "healthcare-lab-public-1"
            },
            "vpc_id": "vpc-0929b3d173f4f8d8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:vpc/vpc-0929b3d173f4f8d8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fffd5a94211b5c5",
            "default_route_table_id": "rtb-003a2bc1b621cb739",
            "default_security_group_id": "sg-04c40bb6c20dfaf80",
            "dhcp_options_id": "dopt-000da7d4b8e0418a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0929b3d173f4f8d8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003a2bc1b621cb739",
            "owner_id": "058264155332",
            "tags": {
              "Name": "healthcare-lab-vpc"
            },
            "tags_all": {
              "Name": "healthcare-lab-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}